Rule loading, storage listener, save message UI

--- a/source/ui/options.css
+++ b/source/ui/options.css
@@ -72,6 +72,11 @@ button {
 	background-color: #2C2;
 }
 
+.positiveText {
+	color: #2C2;
+	margin-right: 0.5em;
+}
+
 .negative {
 	background-color: #C22;
 }
